# ttd-data-python

./: .genignore  .gitignore  NOTICES.txt  README-PYPI.md  README.md  RELEASES.md  USAGE.md  pylintrc  pyproject.toml
.devcontainer/: README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yaml  sdk_publish.yaml  tagging.yaml  tests.yml
.speakeasy/: gen.yaml  out.openapi.yaml  overlay.yaml  workflow.yaml
data-api-local/: .gitignore  TESTING.md  local_uid2_ingest_e2e.py  test_local.py  test_patch_hook.py
data-api-local/.speakeasy/: gen.yaml  workflow.yaml
docs/errors/: advertiserdataserverresponseerror.md  advertiserdsrresponseerror.md  ipaddressdataserverresponseerror.md  merchantdsrresponseerror.md  offlineconversiondataserverresponseerror.md  thirdpartydataserverresponseerror.md  thirdpartydsrresponseerror.md
docs/models/: advertiserdata.md  advertiserdataitem.md  advertiserdatarequest.md  advertiserdataresponseerrorcode.md  advertiserdataserverresponse.md  advertiserdataserverresponseline.md  advertiserdsrfailedline.md  advertiserdsrrequest.md  advertiserdsrresponse.md  baseadvertiserdataitem.md  baseofflineconversiondataitem.md  basepartnerdsrdataitem.md  basethirdpartydataitem.md  dataorigin.md  dataorigintype.md  datasubjectrequestadvertiserdatarequest.md  datasubjectrequestadvertiserdataresponse.md  datasubjectrequestmerchantdatarequest.md  datasubjectrequestmerchantdataresponse.md  datasubjectrequestthirdpartydatarequest.md  dsrerrorcode.md  ipaddressdata.md  (+39 more)
scripts/: prepare_readme.py
(+151 files in other folders)
